@@ -394,7 +394,7 @@ threadring.class: $(srcdir)/threadring.scm
 
 check-threadring: threadring.class
 	CLASSPATH="$(KAWARTLIB)$(CLASSPATH_SEPARATOR)@conf_classpath@.$(CLASSPATH_SEPARATOR)$$CLASSPATH" \
-	$(JAVA) threadring 1000 >threadring1000.log
+	$(JAVA) threadring 1000 103 >threadring1000.log
 	@if $(DIFF) $(srcdir)/threadring-output.txt threadring1000.log; \
 	  then echo '# threadring test passes'; \
 	  else echo FAIL threadring test; fi
